[gd_scene load_steps=13 format=4 uid="uid://dwjwyio16fkr7"]

[ext_resource type="Texture2D" uid="uid://dkkb70nath15q" path="res://assets/level-tilemap.png" id="1_fgl6e"]
[ext_resource type="Script" uid="uid://c36fe8a8qesbb" path="res://scripts/maze.gd" id="1_i67be"]
[ext_resource type="PackedScene" uid="uid://bhuvy04oyf2xj" path="res://scenes/pacman.tscn" id="3_l3biw"]
[ext_resource type="PackedScene" uid="uid://pxbvwl8vakke" path="res://scenes/blinky.tscn" id="4_ykl68"]
[ext_resource type="PackedScene" uid="uid://b6qi1v750aw26" path="res://scenes/inky.tscn" id="5_i67be"]
[ext_resource type="PackedScene" uid="uid://bnpkfjyd2sf6s" path="res://scenes/pinky.tscn" id="6_15xn6"]
[ext_resource type="PackedScene" uid="uid://13i27gxxul08" path="res://scenes/clyde.tscn" id="7_6rghc"]
[ext_resource type="PackedScene" uid="uid://bcd7ch3ukm0v1" path="res://scenes/ui.tscn" id="9_15xn6"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_vqf1n"]
texture = ExtResource("1_fgl6e")
texture_region_size = Vector2i(8, 8)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
5:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
4:4/0 = 0
4:5/0 = 0
5:4/0 = 0
5:5/0 = 0
4:6/0 = 0
5:6/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
3:5/0 = 0
4:1/0 = 0

[sub_resource type="TileSet" id="TileSet_8hln8"]
tile_size = Vector2i(8, 8)
sources/2 = SubResource("TileSetAtlasSource_vqf1n")

[sub_resource type="AtlasTexture" id="AtlasTexture_15xn6"]
atlas = ExtResource("1_fgl6e")
region = Rect2(8, 8, 8, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i67be"]
size = Vector2(8, 8)

[node name="Maze" type="Node2D"]
script = ExtResource("1_i67be")

[node name="NavigationLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAABAAgAAgADAAYAAAAGAAQAAgADAAYAAAAGAAgAAgADAAYAAAAMAAgAAgADAAYAAAAPAAgAAgADAAYAAAAVAAgAAgADAAYAAAAaAAgAAgADAAYAAAAVAAQAAgADAAYAAAAVABEAAgADAAYAAAASABEAAgADAAYAAAASABcAAgADAAYAAAASABQAAgADAAYAAAAVABcAAgADAAYAAAAVABoAAgADAAYAAAASABoAAgADAAYAAAAYAB0AAgADAAYAAAAPACAAAgADAAYAAAAMACAAAgADAAYAAAADAB0AAgADAAYAAAAGABoAAgADAAYAAAAJABoAAgADAAYAAAAGABcAAgADAAYAAAAJABcAAgADAAYAAAAGABEAAgADAAYAAAAJABQAAgADAAYAAAAJABEAAgADAAYAAAAGAAsAAgADAAYAAAAVAAsAAgADAAYAAAACAAgAAgACAAYAAAADAAgAAgACAAYAAAAEAAgAAgACAAYAAAAFAAgAAgACAAYAAAAGAAUAAgACAAYAAAAGAAYAAgACAAYAAAAGAAcAAgACAAYAAAAMAA4AAgADAAUAAAAPAA4AAgADAAUAAAAMABoAAgADAAUAAAAPABoAAgADAAUAAAABAAQAAgACAAYAAAABAAUAAgACAAYAAAABAAYAAgACAAYAAAABAAcAAgACAAYAAAACAAQAAgACAAYAAAADAAQAAgACAAYAAAAEAAQAAgACAAYAAAAFAAQAAgACAAYAAAABAAkAAgACAAYAAAABAAoAAgACAAYAAAABAAsAAgACAAYAAAACAAsAAgACAAYAAAADAAsAAgACAAYAAAAEAAsAAgACAAYAAAAFAAsAAgACAAYAAAAGAAkAAgACAAYAAAAGAAoAAgACAAYAAAAGAAwAAgACAAYAAAAGAA0AAgACAAYAAAAGAA4AAgACAAYAAAAGAA8AAgACAAYAAAAGABAAAgACAAYAAAAGABIAAgACAAYAAAAGABMAAgACAAYAAAAGABQAAgACAAYAAAAGABUAAgACAAYAAAAGABYAAgACAAYAAAAFABcAAgACAAYAAAAEABcAAgACAAYAAAADABcAAgACAAYAAAACABcAAgACAAYAAAABABcAAgACAAYAAAABABgAAgACAAYAAAABABkAAgACAAYAAAABABoAAgACAAYAAAACABoAAgACAAYAAAADABoAAgACAAYAAAADABsAAgACAAYAAAADABwAAgACAAYAAAACAB0AAgACAAYAAAABAB0AAgACAAYAAAABAB4AAgACAAYAAAABAB8AAgACAAYAAAABACAAAgACAAYAAAACACAAAgACAAYAAAADACAAAgACAAYAAAAEACAAAgACAAYAAAAFACAAAgACAAYAAAAGACAAAgACAAYAAAAHACAAAgACAAYAAAAIACAAAgACAAYAAAAJACAAAgACAAYAAAAKACAAAgACAAYAAAALACAAAgACAAYAAAANACAAAgACAAYAAAAOACAAAgACAAYAAAAQACAAAgACAAYAAAARACAAAgACAAYAAAASACAAAgACAAYAAAATACAAAgACAAYAAAAUACAAAgACAAYAAAAVACAAAgACAAYAAAAWACAAAgACAAYAAAAXACAAAgACAAYAAAAYACAAAgACAAYAAAAZACAAAgACAAYAAAAaACAAAgACAAYAAAAaAB8AAgACAAYAAAAaAB4AAgACAAYAAAAaAB0AAgACAAYAAAAZAB0AAgACAAYAAAAYABwAAgACAAYAAAAYABsAAgACAAYAAAAYABoAAgACAAYAAAAZABoAAgACAAYAAAAaABoAAgACAAYAAAAaABkAAgACAAYAAAAaABgAAgACAAYAAAAaABcAAgACAAYAAAAZABcAAgACAAYAAAAYABcAAgACAAYAAAAXABcAAgACAAYAAAAWABcAAgACAAYAAAAVABgAAgACAAYAAAAVABkAAgACAAYAAAAVABsAAgACAAYAAAAVABwAAgACAAYAAAAVAB0AAgACAAYAAAAWAB0AAgACAAYAAAAXAB0AAgACAAYAAAAUABoAAgACAAYAAAATABoAAgACAAYAAAASABsAAgACAAYAAAASABwAAgACAAYAAAASAB0AAgACAAYAAAARAB0AAgACAAYAAAAQAB0AAgACAAYAAAAPAB4AAgACAAYAAAAPAB8AAgACAAYAAAAPAB0AAgACAAYAAAAMAB8AAgACAAYAAAAMAB4AAgACAAYAAAAMAB0AAgACAAYAAAALAB0AAgACAAYAAAAKAB0AAgACAAYAAAAJAB0AAgACAAYAAAAJABwAAgACAAYAAAAJABsAAgACAAYAAAAEAB0AAgACAAYAAAAFAB0AAgACAAYAAAAGAB0AAgACAAYAAAAGABwAAgACAAYAAAAGABsAAgACAAYAAAAHABoAAgACAAYAAAAIABoAAgACAAYAAAAGABkAAgACAAYAAAAGABgAAgACAAYAAAAHABcAAgACAAYAAAAIABcAAgACAAYAAAAKABcAAgACAAYAAAALABcAAgACAAYAAAAMABcAAgACAAYAAAAMABgAAgACAAYAAAAMABkAAgACAAYAAAAKABoAAgACAAYAAAALABoAAgACAAYAAAANABoAAgACAAYAAAAOABoAAgACAAYAAAAPABkAAgACAAYAAAAPABgAAgACAAYAAAAQABcAAgACAAYAAAAPABcAAgACAAYAAAARABcAAgACAAYAAAATABcAAgACAAYAAAAUABcAAgACAAYAAAAQABoAAgACAAYAAAARABoAAgACAAYAAAAJABYAAgACAAYAAAAJABUAAgACAAYAAAASABYAAgACAAYAAAASABUAAgACAAYAAAAJABMAAgACAAYAAAAJABIAAgACAAYAAAAIABEAAgACAAYAAAAHABEAAgACAAYAAAAJABAAAgACAAYAAAAJAA8AAgACAAYAAAAJAA4AAgACAAYAAAAKAA4AAgACAAYAAAALAA4AAgACAAYAAAANAA4AAgACAAYAAAAOAA4AAgACAAYAAAAQAA4AAgACAAYAAAARAA4AAgACAAYAAAASAA4AAgACAAYAAAASAA8AAgACAAYAAAASABAAAgACAAYAAAASABIAAgACAAYAAAASABMAAgACAAYAAAAUABEAAgACAAYAAAATABEAAgACAAYAAAAVABIAAgACAAYAAAAVABMAAgACAAYAAAAVABQAAgACAAYAAAAVABUAAgACAAYAAAAVABYAAgACAAYAAAAVABAAAgACAAYAAAAVAA8AAgACAAYAAAAVAA4AAgACAAYAAAAVAA0AAgACAAYAAAAVAAwAAgACAAYAAAAWAAsAAgACAAYAAAAXAAsAAgACAAYAAAAYAAsAAgACAAYAAAAZAAsAAgACAAYAAAAaAAsAAgACAAYAAAAaAAoAAgACAAYAAAAaAAkAAgACAAYAAAAMAA0AAgACAAYAAAAMAAwAAgACAAYAAAAMAAsAAgACAAYAAAALAAsAAgACAAYAAAAKAAsAAgACAAYAAAAJAAsAAgACAAYAAAAHAAgAAgACAAYAAAAIAAgAAgACAAYAAAAJAAgAAgADAAYAAAASAAgAAgADAAYAAAAJAAoAAgACAAYAAAAJAAkAAgACAAYAAAAKAAgAAgACAAYAAAALAAgAAgACAAYAAAAMAAcAAgACAAYAAAAMAAYAAgACAAYAAAAMAAUAAgACAAYAAAAMAAQAAgACAAYAAAALAAQAAgACAAYAAAAKAAQAAgACAAYAAAAJAAQAAgACAAYAAAAIAAQAAgACAAYAAAAHAAQAAgACAAYAAAANAAgAAgACAAYAAAAOAAgAAgACAAYAAAAPAA0AAgACAAYAAAAPAAwAAgACAAYAAAAPAAsAAgACAAYAAAAQAAsAAgACAAYAAAARAAsAAgACAAYAAAASAAsAAgACAAYAAAASAAoAAgACAAYAAAASAAkAAgACAAYAAAAQAAgAAgACAAYAAAARAAgAAgACAAYAAAAPAAcAAgACAAYAAAAPAAYAAgACAAYAAAAPAAUAAgACAAYAAAAPAAQAAgACAAYAAAAQAAQAAgACAAYAAAARAAQAAgACAAYAAAASAAQAAgACAAYAAAATAAQAAgACAAYAAAAUAAQAAgACAAYAAAAWAAQAAgACAAYAAAAXAAQAAgACAAYAAAAYAAQAAgACAAYAAAAZAAQAAgACAAYAAAAaAAQAAgACAAYAAAAaAAUAAgACAAYAAAAaAAYAAgACAAYAAAAaAAcAAgACAAYAAAAZAAgAAgACAAYAAAAYAAgAAgACAAYAAAAXAAgAAgACAAYAAAAWAAgAAgACAAYAAAAVAAcAAgACAAYAAAAVAAYAAgACAAYAAAAVAAUAAgACAAYAAAATAAgAAgACAAYAAAAUAAgAAgACAAYAAAAVAAkAAgACAAYAAAAVAAoAAgACAAYAAAAFABEAAgACAAYAAAAEABEAAgACAAYAAAADABEAAgACAAYAAAACABEAAgACAAYAAAABABEAAgACAAYAAAAAABEAAgACAAYAAAAWABEAAgACAAYAAAAXABEAAgACAAYAAAAYABEAAgACAAYAAAAZABEAAgACAAYAAAAaABEAAgACAAYAAAAbABEAAgACAAYAAAD//xEAAgACAAYAAAD+/xEAAgACAAYAAAD9/xEAAgACAAYAAAD8/xEAAgACAAYAAAAcABEAAgACAAYAAAAdABEAAgACAAYAAAAeABEAAgACAAYAAAAfABEAAgACAAYAAAA=")
tile_set = SubResource("TileSet_8hln8")
metadata/_edit_lock_ = true

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAMAAgAAAAAAAAAAAAQAAgAAAAEAAAAAAAUAAgAAAAEAAAAAAAYAAgAAAAEAAAAAAAcAAgAAAAEAAAAAAAgAAgAAAAEAAAAAAAkAAgAAAAEAAAAAAAoAAgAAAAEAAAAAAAsAAgAAAAEAAAAAAAwAAgAAAAIAAAAAAA0AAgABAAEAAAAAAA4AAgABAAEAAAAAAA8AAgABAAEAAAAAABAAAgABAAAAAAAAABEAAgABAAEAAAAAABIAAgABAAIAAAAAABMAAgABAAEAAAAAABQAAgABAAEAAAAAABUAAgABAAEAAAAAABYAAgAAAAAAAAAAABcAAgAAAAEAAAAAABgAAgAAAAEAAAAAABkAAgAAAAEAAAAAABoAAgAAAAEAAAAAABsAAgADAAMAAAAAABwAAgADAAQAAAAAAB0AAgAAAAEAAAAAAB4AAgAAAAEAAAABAAMAAgABAAAAAAABAAQAAgABAAYAAAABAAUAAgABAAYAAAABAAYAAgAAAAYAAAABAAcAAgABAAYAAAABAAgAAgABAAYAAAABAAkAAgABAAYAAAABAAoAAgABAAYAAAABAAsAAgABAAYAAAABAAwAAgABAAIAAAABAA0AAgABAAEAAAABAA4AAgABAAEAAAABAA8AAgABAAEAAAABABAAAgABAAAAAAABABEAAgABAAEAAAABABIAAgABAAIAAAABABMAAgABAAEAAAABABQAAgABAAEAAAABABUAAgABAAEAAAABABYAAgABAAAAAAABABcAAgABAAYAAAABABgAAgABAAYAAAABABkAAgABAAYAAAABABoAAgAAAAYAAAABABsAAgAEAAAAAAABABwAAgAEAAIAAAABAB0AAgABAAYAAAABAB4AAgABAAYAAAACAAMAAgABAAAAAAACAAQAAgABAAYAAAACAAUAAgADAAAAAAACAAYAAgADAAEAAAACAAcAAgADAAIAAAACAAgAAgABAAYAAAACAAkAAgADAAAAAAACAAoAAgADAAIAAAACAAsAAgABAAYAAAACAAwAAgABAAIAAAACAA0AAgABAAEAAAACAA4AAgABAAEAAAACAA8AAgABAAEAAAACABAAAgABAAAAAAACABEAAgABAAEAAAACABIAAgABAAIAAAACABMAAgABAAEAAAACABQAAgABAAEAAAACABUAAgABAAEAAAACABYAAgABAAAAAAACABcAAgABAAYAAAACABgAAgADAAAAAAACABkAAgADAAIAAAACABoAAgABAAYAAAACABsAAgAFAAAAAAACABwAAgAFAAIAAAACAB0AAgABAAYAAAACAB4AAgADAAAAAAADAAMAAgABAAAAAAADAAQAAgABAAYAAAADAAUAAgAEAAAAAAADAAYAAgABAAEAAAADAAcAAgAEAAIAAAADAAgAAgABAAYAAAADAAkAAgAEAAAAAAADAAoAAgAEAAIAAAADAAsAAgABAAYAAAADAAwAAgABAAIAAAADAA0AAgABAAEAAAADAA4AAgABAAEAAAADAA8AAgABAAEAAAADABAAAgABAAAAAAADABEAAgABAAEAAAADABIAAgABAAIAAAADABMAAgABAAEAAAADABQAAgABAAEAAAADABUAAgABAAEAAAADABYAAgABAAAAAAADABcAAgABAAYAAAADABgAAgAEAAAAAAADABkAAgAEAAIAAAADABoAAgABAAYAAAADABsAAgABAAYAAAADABwAAgABAAYAAAADAB0AAgABAAYAAAADAB4AAgAEAAAAAAAEAAMAAgABAAAAAAAEAAQAAgABAAYAAAAEAAUAAgAEAAAAAAAEAAYAAgABAAEAAAAEAAcAAgAEAAIAAAAEAAgAAgABAAYAAAAEAAkAAgAEAAAAAAAEAAoAAgAEAAIAAAAEAAsAAgABAAYAAAAEAAwAAgABAAIAAAAEAA0AAgABAAEAAAAEAA4AAgABAAEAAAAEAA8AAgABAAEAAAAEABAAAgABAAAAAAAEABEAAgABAAEAAAAEABIAAgABAAIAAAAEABMAAgABAAEAAAAEABQAAgABAAEAAAAEABUAAgABAAEAAAAEABYAAgABAAAAAAAEABcAAgABAAYAAAAEABgAAgAEAAAAAAAEABkAAgAEAAYAAAAEABoAAgADAAEAAAAEABsAAgADAAEAAAAEABwAAgADAAIAAAAEAB0AAgABAAYAAAAEAB4AAgAEAAAAAAAFAAMAAgABAAAAAAAFAAQAAgABAAYAAAAFAAUAAgAFAAAAAAAFAAYAAgAFAAEAAAAFAAcAAgAFAAIAAAAFAAgAAgABAAYAAAAFAAkAAgAFAAAAAAAFAAoAAgAFAAIAAAAFAAsAAgABAAYAAAAFAAwAAgAFAAAAAAAFAA0AAgAAAAEAAAAFAA4AAgAAAAEAAAAFAA8AAgAAAAEAAAAFABAAAgAFAAIAAAAFABEAAgABAAEAAAAFABIAAgAFAAAAAAAFABMAAgAAAAEAAAAFABQAAgAAAAEAAAAFABUAAgAAAAEAAAAFABYAAgAFAAIAAAAFABcAAgABAAYAAAAFABgAAgAFAAAAAAAFABkAAgAFAAEAAAAFABoAAgAFAAEAAAAFABsAAgAFAAEAAAAFABwAAgAFAAIAAAAFAB0AAgABAAYAAAAFAB4AAgAEAAAAAAAGAAMAAgABAAAAAAAGAAQAAgABAAYAAAAGAAUAAgABAAYAAAAGAAYAAgABAAYAAAAGAAcAAgABAAYAAAAGAAgAAgABAAYAAAAGAAkAAgABAAYAAAAGAAoAAgABAAYAAAAGAAsAAgABAAYAAAAGAAwAAgABAAYAAAAGAA0AAgABAAYAAAAGAA4AAgABAAYAAAAGAA8AAgABAAYAAAAGABAAAgABAAYAAAAGABEAAgABAAYAAAAGABIAAgABAAYAAAAGABMAAgABAAYAAAAGABQAAgABAAYAAAAGABUAAgABAAYAAAAGABYAAgABAAYAAAAGABcAAgABAAYAAAAGABgAAgABAAYAAAAGABkAAgABAAYAAAAGABoAAgABAAYAAAAGABsAAgABAAYAAAAGABwAAgABAAYAAAAGAB0AAgABAAYAAAAGAB4AAgAEAAAAAAAHAAMAAgABAAAAAAAHAAQAAgABAAYAAAAHAAUAAgADAAAAAAAHAAYAAgADAAEAAAAHAAcAAgADAAIAAAAHAAgAAgABAAYAAAAHAAkAAgADAAAAAAAHAAoAAgADAAEAAAAHAAsAAgADAAEAAAAHAAwAAgADAAEAAAAHAA0AAgADAAEAAAAHAA4AAgADAAEAAAAHAA8AAgADAAEAAAAHABAAAgADAAIAAAAHABEAAgABAAEAAAAHABIAAgADAAAAAAAHABMAAgADAAEAAAAHABQAAgADAAEAAAAHABUAAgADAAEAAAAHABYAAgADAAIAAAAHABcAAgABAAYAAAAHABgAAgADAAAAAAAHABkAAgADAAIAAAAHABoAAgABAAYAAAAHABsAAgADAAAAAAAHABwAAgADAAEAAAAHAB0AAgADAAEAAAAHAB4AAgAEAAUAAAAIAAMAAgABAAAAAAAIAAQAAgABAAYAAAAIAAUAAgAEAAAAAAAIAAYAAgABAAEAAAAIAAcAAgAEAAIAAAAIAAgAAgABAAYAAAAIAAkAAgAFAAAAAAAIAAoAAgAFAAEAAAAIAAsAAgAFAAEAAAAIAAwAAgAFAAUAAAAIAA0AAgAFAAYAAAAIAA4AAgAFAAEAAAAIAA8AAgAFAAEAAAAIABAAAgAFAAIAAAAIABEAAgABAAEAAAAIABIAAgAFAAAAAAAIABMAAgAFAAEAAAAIABQAAgAFAAEAAAAIABUAAgAFAAEAAAAIABYAAgAFAAIAAAAIABcAAgABAAYAAAAIABgAAgAEAAAAAAAIABkAAgAEAAIAAAAIABoAAgABAAYAAAAIABsAAgAFAAAAAAAIABwAAgAFAAEAAAAIAB0AAgAFAAEAAAAIAB4AAgAFAAUAAAAJAAMAAgABAAAAAAAJAAQAAgABAAYAAAAJAAUAAgAEAAAAAAAJAAYAAgABAAEAAAAJAAcAAgAEAAIAAAAJAAgAAgABAAYAAAAJAAkAAgABAAYAAAAJAAoAAgABAAYAAAAJAAsAAgABAAYAAAAJAAwAAgAEAAAAAAAJAA0AAgAEAAIAAAAJAA4AAgABAAEAAAAJAA8AAgABAAEAAAAJABAAAgABAAEAAAAJABEAAgABAAEAAAAJABIAAgABAAEAAAAJABMAAgABAAEAAAAJABQAAgABAAEAAAAJABUAAgABAAEAAAAJABYAAgABAAEAAAAJABcAAgABAAYAAAAJABgAAgAEAAAAAAAJABkAAgAEAAIAAAAJABoAAgABAAYAAAAJABsAAgABAAYAAAAJABwAAgABAAYAAAAJAB0AAgABAAYAAAAJAB4AAgAEAAAAAAAKAAMAAgABAAAAAAAKAAQAAgABAAYAAAAKAAUAAgAEAAAAAAAKAAYAAgABAAEAAAAKAAcAAgAEAAIAAAAKAAgAAgABAAYAAAAKAAkAAgADAAAAAAAKAAoAAgADAAIAAAAKAAsAAgABAAYAAAAKAAwAAgAEAAAAAAAKAA0AAgAEAAIAAAAKAA4AAgABAAEAAAAKAA8AAgAAAAMAAAAKABAAAgAAAAQAAAAKABEAAgAAAAQAAAAKABIAAgAAAAQAAAAKABMAAgAAAAUAAAAKABQAAgABAAEAAAAKABUAAgADAAAAAAAKABYAAgADAAIAAAAKABcAAgABAAYAAAAKABgAAgAEAAAAAAAKABkAAgAEAAIAAAAKABoAAgABAAYAAAAKABsAAgADAAAAAAAKABwAAgADAAIAAAAKAB0AAgABAAYAAAAKAB4AAgAEAAAAAAALAAMAAgABAAAAAAALAAQAAgABAAYAAAALAAUAAgAFAAAAAAALAAYAAgAFAAEAAAALAAcAAgAFAAIAAAALAAgAAgABAAYAAAALAAkAAgAEAAAAAAALAAoAAgAEAAIAAAALAAsAAgABAAYAAAALAAwAAgAFAAAAAAALAA0AAgAFAAIAAAALAA4AAgABAAEAAAALAA8AAgABAAMAAAALABAAAgABAAEAAAALABEAAgABAAEAAAALABIAAgABAAEAAAALABMAAgABAAUAAAALABQAAgABAAEAAAALABUAAgAEAAAAAAALABYAAgAEAAIAAAALABcAAgABAAYAAAALABgAAgAFAAAAAAALABkAAgAFAAIAAAALABoAAgABAAYAAAALABsAAgAEAAAAAAALABwAAgAEAAIAAAALAB0AAgABAAYAAAALAB4AAgAFAAAAAAAMAAMAAgABAAAAAAAMAAQAAgABAAYAAAAMAAUAAgABAAYAAAAMAAYAAgABAAYAAAAMAAcAAgABAAYAAAAMAAgAAgABAAYAAAAMAAkAAgAEAAAAAAAMAAoAAgAEAAIAAAAMAAsAAgABAAYAAAAMAAwAAgABAAEAAAAMAA0AAgABAAEAAAAMAA4AAgABAAEAAAAMAA8AAgABAAMAAAAMABAAAgABAAEAAAAMABEAAgABAAEAAAAMABIAAgABAAEAAAAMABMAAgABAAUAAAAMABQAAgABAAEAAAAMABUAAgAEAAAAAAAMABYAAgAEAAIAAAAMABcAAgABAAYAAAAMABgAAgABAAYAAAAMABkAAgABAAYAAAAMABoAAgABAAYAAAAMABsAAgAEAAAAAAAMABwAAgAEAAIAAAAMAB0AAgABAAYAAAAMAB4AAgABAAYAAAANAAMAAgAFAAQAAAANAAQAAgADAAEAAAANAAUAAgADAAEAAAANAAYAAgADAAEAAAANAAcAAgADAAIAAAANAAgAAgABAAYAAAANAAkAAgAEAAAAAAANAAoAAgAEAAYAAAANAAsAAgADAAEAAAANAAwAAgADAAEAAAANAA0AAgADAAIAAAANAA4AAgABAAEAAAANAA8AAgABAAQAAAANABAAAgABAAEAAAANABEAAgABAAEAAAANABIAAgABAAEAAAANABMAAgABAAUAAAANABQAAgABAAEAAAANABUAAgAEAAAAAAANABYAAgAEAAYAAAANABcAAgADAAEAAAANABgAAgADAAEAAAANABkAAgADAAIAAAANABoAAgABAAEAAAANABsAAgAEAAAAAAANABwAAgAEAAYAAAANAB0AAgADAAEAAAANAB4AAgADAAEAAAAOAAMAAgAFAAMAAAAOAAQAAgAFAAEAAAAOAAUAAgAFAAEAAAAOAAYAAgAFAAEAAAAOAAcAAgAFAAIAAAAOAAgAAgABAAYAAAAOAAkAAgAEAAAAAAAOAAoAAgAFAAYAAAAOAAsAAgAFAAEAAAAOAAwAAgAFAAEAAAAOAA0AAgAFAAIAAAAOAA4AAgABAAEAAAAOAA8AAgABAAQAAAAOABAAAgABAAEAAAAOABEAAgABAAEAAAAOABIAAgABAAEAAAAOABMAAgABAAUAAAAOABQAAgABAAEAAAAOABUAAgAEAAAAAAAOABYAAgAFAAYAAAAOABcAAgAFAAEAAAAOABgAAgAFAAEAAAAOABkAAgAFAAIAAAAOABoAAgABAAEAAAAOABsAAgAEAAAAAAAOABwAAgAFAAYAAAAOAB0AAgAFAAEAAAAOAB4AAgAFAAEAAAAPAAMAAgABAAAAAAAPAAQAAgABAAYAAAAPAAUAAgABAAYAAAAPAAYAAgABAAYAAAAPAAcAAgABAAYAAAAPAAgAAgABAAYAAAAPAAkAAgAEAAAAAAAPAAoAAgAEAAIAAAAPAAsAAgABAAYAAAAPAAwAAgABAAEAAAAPAA0AAgABAAEAAAAPAA4AAgABAAEAAAAPAA8AAgABAAMAAAAPABAAAgABAAEAAAAPABEAAgABAAEAAAAPABIAAgABAAEAAAAPABMAAgABAAUAAAAPABQAAgABAAEAAAAPABUAAgAEAAAAAAAPABYAAgAEAAIAAAAPABcAAgABAAYAAAAPABgAAgABAAYAAAAPABkAAgABAAYAAAAPABoAAgABAAYAAAAPABsAAgAEAAAAAAAPABwAAgAEAAIAAAAPAB0AAgABAAYAAAAPAB4AAgABAAYAAAAQAAMAAgABAAAAAAAQAAQAAgABAAYAAAAQAAUAAgADAAAAAAAQAAYAAgADAAEAAAAQAAcAAgADAAIAAAAQAAgAAgABAAYAAAAQAAkAAgAEAAAAAAAQAAoAAgAEAAIAAAAQAAsAAgABAAYAAAAQAAwAAgADAAAAAAAQAA0AAgADAAIAAAAQAA4AAgABAAEAAAAQAA8AAgABAAMAAAAQABAAAgABAAEAAAAQABEAAgABAAEAAAAQABIAAgABAAEAAAAQABMAAgABAAUAAAAQABQAAgABAAEAAAAQABUAAgAEAAAAAAAQABYAAgAEAAIAAAAQABcAAgABAAYAAAAQABgAAgADAAAAAAAQABkAAgADAAIAAAAQABoAAgABAAYAAAAQABsAAgAEAAAAAAAQABwAAgAEAAIAAAAQAB0AAgABAAYAAAAQAB4AAgADAAAAAAARAAMAAgABAAAAAAARAAQAAgABAAYAAAARAAUAAgAEAAAAAAARAAYAAgABAAEAAAARAAcAAgAEAAIAAAARAAgAAgABAAYAAAARAAkAAgAFAAAAAAARAAoAAgAFAAIAAAARAAsAAgABAAYAAAARAAwAAgAEAAAAAAARAA0AAgAEAAIAAAARAA4AAgABAAEAAAARAA8AAgACAAMAAAARABAAAgACAAQAAAARABEAAgACAAQAAAARABIAAgACAAQAAAARABMAAgACAAUAAAARABQAAgABAAEAAAARABUAAgAFAAAAAAARABYAAgAFAAIAAAARABcAAgABAAYAAAARABgAAgAEAAAAAAARABkAAgAEAAIAAAARABoAAgABAAYAAAARABsAAgAFAAAAAAARABwAAgAFAAIAAAARAB0AAgABAAYAAAARAB4AAgAEAAAAAAASAAMAAgABAAAAAAASAAQAAgABAAYAAAASAAUAAgAEAAAAAAASAAYAAgABAAEAAAASAAcAAgAEAAIAAAASAAgAAgABAAYAAAASAAkAAgABAAYAAAASAAoAAgABAAYAAAASAAsAAgABAAYAAAASAAwAAgAEAAAAAAASAA0AAgAEAAIAAAASAA4AAgABAAEAAAASAA8AAgABAAEAAAASABAAAgABAAEAAAASABEAAgABAAEAAAASABIAAgABAAEAAAASABMAAgABAAEAAAASABQAAgABAAEAAAASABUAAgABAAEAAAASABYAAgABAAEAAAASABcAAgABAAYAAAASABgAAgAEAAAAAAASABkAAgAEAAIAAAASABoAAgABAAYAAAASABsAAgABAAYAAAASABwAAgABAAYAAAASAB0AAgABAAYAAAASAB4AAgAEAAAAAAATAAMAAgABAAAAAAATAAQAAgABAAYAAAATAAUAAgAEAAAAAAATAAYAAgABAAEAAAATAAcAAgAEAAIAAAATAAgAAgABAAYAAAATAAkAAgADAAAAAAATAAoAAgADAAEAAAATAAsAAgADAAEAAAATAAwAAgAEAAUAAAATAA0AAgAEAAYAAAATAA4AAgADAAEAAAATAA8AAgADAAEAAAATABAAAgADAAIAAAATABEAAgABAAEAAAATABIAAgADAAAAAAATABMAAgADAAEAAAATABQAAgADAAEAAAATABUAAgADAAEAAAATABYAAgADAAIAAAATABcAAgABAAYAAAATABgAAgAEAAAAAAATABkAAgAEAAIAAAATABoAAgABAAYAAAATABsAAgADAAAAAAATABwAAgADAAEAAAATAB0AAgADAAEAAAATAB4AAgAEAAUAAAAUAAMAAgABAAAAAAAUAAQAAgABAAYAAAAUAAUAAgAFAAAAAAAUAAYAAgAFAAEAAAAUAAcAAgAFAAIAAAAUAAgAAgABAAYAAAAUAAkAAgAFAAAAAAAUAAoAAgAFAAEAAAAUAAsAAgAFAAEAAAAUAAwAAgAFAAEAAAAUAA0AAgAFAAEAAAAUAA4AAgAFAAEAAAAUAA8AAgAFAAEAAAAUABAAAgAFAAIAAAAUABEAAgABAAEAAAAUABIAAgAFAAAAAAAUABMAAgAFAAEAAAAUABQAAgAFAAEAAAAUABUAAgAFAAEAAAAUABYAAgAFAAIAAAAUABcAAgABAAYAAAAUABgAAgAFAAAAAAAUABkAAgAFAAIAAAAUABoAAgABAAYAAAAUABsAAgAFAAAAAAAUABwAAgAFAAEAAAAUAB0AAgAFAAEAAAAUAB4AAgAFAAUAAAAVAAMAAgABAAAAAAAVAAQAAgABAAYAAAAVAAUAAgABAAYAAAAVAAYAAgABAAYAAAAVAAcAAgABAAYAAAAVAAgAAgABAAYAAAAVAAkAAgABAAYAAAAVAAoAAgABAAYAAAAVAAsAAgABAAYAAAAVAAwAAgABAAYAAAAVAA0AAgABAAYAAAAVAA4AAgABAAYAAAAVAA8AAgABAAYAAAAVABAAAgABAAYAAAAVABEAAgABAAYAAAAVABIAAgABAAYAAAAVABMAAgABAAYAAAAVABQAAgABAAYAAAAVABUAAgABAAYAAAAVABYAAgABAAYAAAAVABcAAgABAAYAAAAVABgAAgABAAYAAAAVABkAAgABAAYAAAAVABoAAgABAAYAAAAVABsAAgABAAYAAAAVABwAAgABAAYAAAAVAB0AAgABAAYAAAAVAB4AAgAEAAAAAAAWAAMAAgABAAAAAAAWAAQAAgABAAYAAAAWAAUAAgADAAAAAAAWAAYAAgADAAEAAAAWAAcAAgADAAIAAAAWAAgAAgABAAYAAAAWAAkAAgADAAAAAAAWAAoAAgADAAIAAAAWAAsAAgABAAYAAAAWAAwAAgADAAAAAAAWAA0AAgACAAEAAAAWAA4AAgACAAEAAAAWAA8AAgACAAEAAAAWABAAAgADAAIAAAAWABEAAgABAAEAAAAWABIAAgADAAAAAAAWABMAAgACAAEAAAAWABQAAgACAAEAAAAWABUAAgACAAEAAAAWABYAAgADAAIAAAAWABcAAgABAAYAAAAWABgAAgADAAAAAAAWABkAAgADAAEAAAAWABoAAgADAAEAAAAWABsAAgADAAEAAAAWABwAAgADAAIAAAAWAB0AAgABAAYAAAAWAB4AAgAEAAAAAAAXAAMAAgABAAAAAAAXAAQAAgABAAYAAAAXAAUAAgAEAAAAAAAXAAYAAgABAAEAAAAXAAcAAgAEAAIAAAAXAAgAAgABAAYAAAAXAAkAAgAEAAAAAAAXAAoAAgAEAAIAAAAXAAsAAgABAAYAAAAXAAwAAgABAAIAAAAXAA0AAgABAAEAAAAXAA4AAgABAAEAAAAXAA8AAgABAAEAAAAXABAAAgABAAAAAAAXABEAAgABAAEAAAAXABIAAgABAAIAAAAXABMAAgABAAEAAAAXABQAAgABAAEAAAAXABUAAgABAAEAAAAXABYAAgABAAAAAAAXABcAAgABAAYAAAAXABgAAgAEAAAAAAAXABkAAgAFAAYAAAAXABoAAgAFAAEAAAAXABsAAgAFAAEAAAAXABwAAgAFAAIAAAAXAB0AAgABAAYAAAAXAB4AAgAEAAAAAAAYAAMAAgABAAAAAAAYAAQAAgABAAYAAAAYAAUAAgAEAAAAAAAYAAYAAgABAAEAAAAYAAcAAgAEAAIAAAAYAAgAAgABAAYAAAAYAAkAAgAEAAAAAAAYAAoAAgAEAAIAAAAYAAsAAgABAAYAAAAYAAwAAgABAAIAAAAYAA0AAgABAAEAAAAYAA4AAgABAAEAAAAYAA8AAgABAAEAAAAYABAAAgABAAAAAAAYABEAAgABAAEAAAAYABIAAgABAAIAAAAYABMAAgABAAEAAAAYABQAAgABAAEAAAAYABUAAgABAAEAAAAYABYAAgABAAAAAAAYABcAAgABAAYAAAAYABgAAgAEAAAAAAAYABkAAgAEAAIAAAAYABoAAgABAAYAAAAYABsAAgABAAYAAAAYABwAAgABAAYAAAAYAB0AAgABAAYAAAAYAB4AAgAEAAAAAAAZAAMAAgABAAAAAAAZAAQAAgABAAYAAAAZAAUAAgAFAAAAAAAZAAYAAgAFAAEAAAAZAAcAAgAFAAIAAAAZAAgAAgABAAYAAAAZAAkAAgAFAAAAAAAZAAoAAgAFAAIAAAAZAAsAAgABAAYAAAAZAAwAAgABAAIAAAAZAA0AAgABAAEAAAAZAA4AAgABAAEAAAAZAA8AAgABAAEAAAAZABAAAgABAAAAAAAZABEAAgABAAEAAAAZABIAAgABAAIAAAAZABMAAgABAAEAAAAZABQAAgABAAEAAAAZABUAAgABAAEAAAAZABYAAgABAAAAAAAZABcAAgABAAYAAAAZABgAAgAFAAAAAAAZABkAAgAFAAIAAAAZABoAAgABAAYAAAAZABsAAgADAAAAAAAZABwAAgADAAIAAAAZAB0AAgABAAYAAAAZAB4AAgAFAAAAAAAaAAMAAgABAAAAAAAaAAQAAgABAAYAAAAaAAUAAgABAAYAAAAaAAYAAgAAAAYAAAAaAAcAAgABAAYAAAAaAAgAAgABAAYAAAAaAAkAAgABAAYAAAAaAAoAAgABAAYAAAAaAAsAAgABAAYAAAAaAAwAAgABAAIAAAAaAA0AAgABAAEAAAAaAA4AAgABAAEAAAAaAA8AAgABAAEAAAAaABAAAgABAAAAAAAaABEAAgABAAEAAAAaABIAAgABAAIAAAAaABMAAgABAAEAAAAaABQAAgABAAEAAAAaABUAAgABAAEAAAAaABYAAgABAAAAAAAaABcAAgABAAYAAAAaABgAAgABAAYAAAAaABkAAgABAAYAAAAaABoAAgAAAAYAAAAaABsAAgAEAAAAAAAaABwAAgAEAAIAAAAaAB0AAgABAAYAAAAaAB4AAgABAAYAAAAbAAMAAgACAAAAAAAbAAQAAgACAAEAAAAbAAUAAgACAAEAAAAbAAYAAgACAAEAAAAbAAcAAgACAAEAAAAbAAgAAgACAAEAAAAbAAkAAgACAAEAAAAbAAoAAgACAAEAAAAbAAsAAgACAAEAAAAbAAwAAgACAAIAAAAbAA0AAgABAAEAAAAbAA4AAgABAAEAAAAbAA8AAgABAAEAAAAbABAAAgABAAAAAAAbABEAAgABAAEAAAAbABIAAgABAAIAAAAbABMAAgABAAEAAAAbABQAAgABAAEAAAAbABUAAgABAAEAAAAbABYAAgACAAAAAAAbABcAAgACAAEAAAAbABgAAgACAAEAAAAbABkAAgACAAEAAAAbABoAAgACAAEAAAAbABsAAgAEAAMAAAAbABwAAgAEAAQAAAAbAB0AAgACAAEAAAAbAB4AAgACAAEAAAD8/xAAAgABAAAAAAD8/xEAAgABAAEAAAD8/xIAAgABAAIAAAD9/xAAAgABAAAAAAD9/xEAAgABAAEAAAD9/xIAAgABAAIAAAD+/xAAAgABAAAAAAD+/xEAAgABAAEAAAD+/xIAAgABAAIAAAD//xAAAgABAAAAAAD//xEAAgABAAEAAAD//xIAAgABAAIAAAAAAB8AAgAAAAEAAAAAACAAAgAAAAEAAAAAACEAAgAAAAIAAAABAB8AAgABAAYAAAABACAAAgABAAYAAAABACEAAgABAAIAAAACAB8AAgADAAIAAAACACAAAgABAAYAAAACACEAAgABAAIAAAADAB8AAgAEAAIAAAADACAAAgABAAYAAAADACEAAgABAAIAAAAEAB8AAgAEAAIAAAAEACAAAgABAAYAAAAEACEAAgABAAIAAAAFAB8AAgAEAAIAAAAFACAAAgABAAYAAAAFACEAAgABAAIAAAAGAB8AAgAEAAIAAAAGACAAAgABAAYAAAAGACEAAgABAAIAAAAHAB8AAgAEAAIAAAAHACAAAgABAAYAAAAHACEAAgABAAIAAAAIAB8AAgAEAAIAAAAIACAAAgABAAYAAAAIACEAAgABAAIAAAAJAB8AAgAEAAIAAAAJACAAAgABAAYAAAAJACEAAgABAAIAAAAKAB8AAgAEAAIAAAAKACAAAgABAAYAAAAKACEAAgABAAIAAAALAB8AAgAFAAIAAAALACAAAgABAAYAAAALACEAAgABAAIAAAAMAB8AAgABAAYAAAAMACAAAgABAAYAAAAMACEAAgABAAIAAAANAB8AAgADAAIAAAANACAAAgABAAYAAAANACEAAgABAAIAAAAOAB8AAgAFAAIAAAAOACAAAgABAAYAAAAOACEAAgABAAIAAAAPAB8AAgABAAYAAAAPACAAAgABAAYAAAAPACEAAgABAAIAAAAQAB8AAgADAAIAAAAQACAAAgABAAYAAAAQACEAAgABAAIAAAARAB8AAgAEAAIAAAARACAAAgABAAYAAAARACEAAgABAAIAAAASAB8AAgAEAAIAAAASACAAAgABAAYAAAASACEAAgABAAIAAAATAB8AAgAEAAIAAAATACAAAgABAAYAAAATACEAAgABAAIAAAAUAB8AAgAEAAIAAAAUACAAAgABAAYAAAAUACEAAgABAAIAAAAVAB8AAgAEAAIAAAAVACAAAgABAAYAAAAVACEAAgABAAIAAAAWAB8AAgAEAAIAAAAWACAAAgABAAYAAAAWACEAAgABAAIAAAAXAB8AAgAEAAIAAAAXACAAAgABAAYAAAAXACEAAgABAAIAAAAYAB8AAgAEAAIAAAAYACAAAgABAAYAAAAYACEAAgABAAIAAAAZAB8AAgAFAAIAAAAZACAAAgABAAYAAAAZACEAAgABAAIAAAAaAB8AAgABAAYAAAAaACAAAgABAAYAAAAaACEAAgABAAIAAAAbAB8AAgACAAEAAAAbACAAAgACAAEAAAAbACEAAgACAAIAAAAcABAAAgABAAAAAAAcABEAAgABAAEAAAAcABIAAgABAAIAAAAdABAAAgABAAAAAAAdABEAAgABAAEAAAAdABIAAgABAAIAAAAeABAAAgABAAAAAAAeABEAAgABAAEAAAAeABIAAgABAAIAAAAfABAAAgABAAAAAAAfABEAAgABAAEAAAAfABIAAgABAAIAAAA=")
tile_set = SubResource("TileSet_8hln8")
metadata/_edit_lock_ = true

[node name="EnergizerBlink" type="Node2D" parent="TileMapLayer"]
visible = false

[node name="Sprite2D" type="Sprite2D" parent="TileMapLayer/EnergizerBlink"]
position = Vector2(12, 52)
texture = SubResource("AtlasTexture_15xn6")

[node name="Sprite2D2" type="Sprite2D" parent="TileMapLayer/EnergizerBlink"]
position = Vector2(212, 52)
texture = SubResource("AtlasTexture_15xn6")

[node name="Sprite2D3" type="Sprite2D" parent="TileMapLayer/EnergizerBlink"]
position = Vector2(212, 212)
texture = SubResource("AtlasTexture_15xn6")

[node name="Sprite2D4" type="Sprite2D" parent="TileMapLayer/EnergizerBlink"]
position = Vector2(12, 212)
texture = SubResource("AtlasTexture_15xn6")

[node name="BlinkTimer" type="Timer" parent="TileMapLayer/EnergizerBlink"]
wait_time = 0.3
autostart = true

[node name="Pacman" parent="." node_paths=PackedStringArray("tile_map") instance=ExtResource("3_l3biw")]
position = Vector2(113, 212)
tile_map = NodePath("../TileMapLayer")

[node name="Ghosts" type="Node2D" parent="."]
process_mode = 3

[node name="Blinky" parent="Ghosts" node_paths=PackedStringArray("tile_map", "navigation_map", "player") instance=ExtResource("4_ykl68")]
process_mode = 1
position = Vector2(112, 116)
tile_map = NodePath("../../TileMapLayer")
navigation_map = NodePath("../../NavigationLayer")
player = NodePath("../../Pacman")
scatter_pos = Vector2i(25, 0)

[node name="Pinky" parent="Ghosts" node_paths=PackedStringArray("tile_map", "navigation_map", "player") instance=ExtResource("6_15xn6")]
process_mode = 1
position = Vector2(112, 140)
tile_map = NodePath("../../TileMapLayer")
navigation_map = NodePath("../../NavigationLayer")
player = NodePath("../../Pacman")
scatter_pos = Vector2i(2, 0)

[node name="Inky" parent="Ghosts" node_paths=PackedStringArray("blinky", "tile_map", "navigation_map", "player") instance=ExtResource("5_i67be")]
process_mode = 1
position = Vector2(96, 140)
blinky = NodePath("../Blinky")
tile_map = NodePath("../../TileMapLayer")
navigation_map = NodePath("../../NavigationLayer")
player = NodePath("../../Pacman")
scatter_pos = Vector2i(27, 35)

[node name="Clyde" parent="Ghosts" node_paths=PackedStringArray("tile_map", "navigation_map", "player") instance=ExtResource("7_6rghc")]
process_mode = 1
position = Vector2(128, 140)
tile_map = NodePath("../../TileMapLayer")
navigation_map = NodePath("../../NavigationLayer")
player = NodePath("../../Pacman")
scatter_pos = Vector2i(0, 35)

[node name="Respawner" type="Area2D" parent="."]
position = Vector2(0, 8)
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Respawner"]
position = Vector2(112, 140)
shape = SubResource("RectangleShape2D_i67be")

[node name="UI" parent="." instance=ExtResource("9_15xn6")]
offset_right = 224.0
offset_bottom = 288.0
size_flags_horizontal = 3

[node name="Particles" type="Node2D" parent="."]

[node name="ParticleClearTimer" type="Timer" parent="Particles"]
process_mode = 3
wait_time = 5.0
one_shot = true

[connection signal="timeout" from="TileMapLayer/EnergizerBlink/BlinkTimer" to="." method="_on_blink_timer_timeout"]
[connection signal="body_entered" from="Respawner" to="." method="_on_respawner_body_entered"]
[connection signal="timeout" from="Particles/ParticleClearTimer" to="." method="_on_particle_clear_timer_timeout"]
